--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,172 @@
+.main-container {
+  padding: 10px;
+}
 
+@media (max-width: 768px) {
+  .main-container {
+    padding: 8px;
+  }
+}
+
+.course-live-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.course-live-primary {
+  width: 1280px;
+  height: auto;
+  padding: 8px;
+}
+
+.course-live-primary > div:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.course-live-secondary {
+  width: 400px;
+  height: auto;
+  padding: 8px;
+  flex-shrink: 0;
+}
+
+.course-live-secondary > div:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.card {
+  width: 100%;
+  border-radius: 6px;
+  overflow: hidden;
+  display: flex;
+  overflow: hidden;
+}
+
+.course-detail-card {
+  height: 711px;
+  background: #fff;
+  padding: 20px;
+  justify-content: space-between;
+}
+
+.course-live-player-card {
+  padding-top: 56.25%;
+  position: relative;
+  background: #333;
+}
+
+.course-live-player-container {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: absolute;
+  background: #000;
+  display: flex;
+  align-items: center;
+}
+
+.course-live-player-mask {
+  /* z-index: 999; */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  position: absolute;
+  background: rgb(73, 73, 73);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.course-live-player {
+  flex-grow: 1;
+}
+
+.course-live-chat-card {
+  height: 711px;
+  background: #fff;
+  flex-direction: column;
+}
+
+@media (max-width: 768px) {
+  .course-live-chat-card {
+    height: 640px;
+  }
+}
+
+.live-chat-msg-containter {
+  width: 100%;
+  /* height: calc(100% - 130px); */
+  padding: 20px 30px;
+  overflow-y: scroll;
+  flex-grow: 1;
+}
+
+.live-chat-msg-item {
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.live-chat-msg-item:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.live-chat-msg-item-name {
+  font-weight: bold;
+  color: #000;
+}
+
+.live-chat-header-bar,
+.live-chat-send-bar {
+  background: #ddd;
+  width: 100%;
+  height: 65px;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.live-chat-send-button {
+  width: 64px;
+  flex-shrink: 0;
+}
+
+.live-chat-send-button:hover {
+  color: blue;
+}
+
+.live-chat-send-input-container {
+  padding-left: 20px;
+  flex-grow: 1;
+}
+
+.live-chat-send-input {
+  border-bottom: 1px solid #333;
+  background: transparent;
+  width: 100%;
+  font-size: 16px;
+}
+
+.video-controls-container {
+  background: rgba(29, 29, 29, 0.8);
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.video-controls-container:hover {
+  opacity: 1;
+}
+
+.video-controls-button {
+  background: transparent;
+}
+
+.video-controls-button > i {
+  font-size: 36px;
+  color: #ddd;
+}
